Separated some styles out into sass. Added add ESL game feature. Also added CSRF token exception listener.
Signed-off-by: bluesaberist <bluesaberist@gmail.com>

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -27,5 +27,5 @@ security:
         target: /
   access_control:
     - { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY }
-    - { path: ^/esl-roster, roles: ROLE_ADMIN }
+    - { path: ^/change, roles: ROLE_ADMIN }
     - { path: ^/, roles: IS_AUTHENTICATED_ANONYMOUSLY }
